fixed border gap value

--- a/app/index.css
+++ b/app/index.css
@@ -223,7 +223,7 @@ h5 {
 }
 
 .border-gap {
-  margin-top: 4em;
+  margin-top: 6em;
 }
 
 /* ABOUT SECTION STYLES */
